# sgeutils

./: CMakeLists.txt
build_headers/: CMakeLists.txt  build_headers.cpp
check_includes/: CMakeLists.txt  check_includes.cpp
compile_headers/: CMakeLists.txt  compile_headers.cpp
convenience_headers/: CMakeLists.txt  convenience_headers.cpp
file_switch/: CMakeLists.txt  file_switch.cpp
generate_includeguard/: CMakeLists.txt  generate_includeguard.cpp
prettify_includes/: CMakeLists.txt  prettify_includes.cpp  prettify_includes.py
remove_exec_bit/: CMakeLists.txt  remove_exec_bit.sh
replace_whitespaces/: CMakeLists.txt  replace_whitespaces.sh
sgebuild/: CMakeLists.txt  common.sh  gitignore-example  sgebuild  sgebuild-common  sgebuild.sh  sgebuild_all  sgebuild_all.sh
single_compile/: CMakeLists.txt  single_compile.cpp  single_compile_header
src/: convenience_headers.cpp
update_cmake/: CMakeLists.txt  update_cmake.cpp  update_cmake.sh
update_headers/: CMakeLists.txt  update_headers.sh
update_license/: CMakeLists.txt  multi_update_license.cpp  update_license.cpp
util/: prettify_includes
vim/: USAGE  vimrc
vim/highlight_whitespaces/plugin/: highlight_whitespaces.vim
vim/includehelper/plugin/: includehelper.vim
vim/path_from_clang/plugin/: path_from_clang.vim
