find_package(
	FcpptThreads
	REQUIRED
)

if(
	WIN32
)
	set(
		ASIO_LIBS
		WS2_32
	)
endif()

sge_utils_add_program(
	compile_headers
	SOURCES
		compile_headers.cpp
	COMPILE_FLAGS
		${FcpptThreads_DEFINITIONS}
	LINK_LIBS
		${FcpptThreads_LIBRARIES}
		${fcppt_core_TARGET}
		${fcppt_filesystem_TARGET}
		${fcppt_options_TARGET}
		${sgecore_TARGET}
		${sgeparsejson_TARGET}
		${ASIO_LIBS}
)
